--- a/pengantar_machine_learning_dengan_python.ipynb
+++ b/pengantar_machine_learning_dengan_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -746,6 +746,37 @@
     "plt.xlabel(\"true_label\")\n",
     "plt.ylabel(\"predict_label\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 1 3 2 4 4 1 3 3 5 1 2 5 2 3 3 1 3 3 4 2 3 3 1 5 3 3 3 3 3 2 3 5 3 1 4 4\n",
+      " 4 4 2 4 1 1 2 5 3 5 2 1 1 2 5 1 1 2 5 1 3 3 3 4 2 3 5 5 3 3 3 4 1 5 4 2 1\n",
+      " 1 4 3 3 3 5 1 2 3 2 4 3 1 3 2 1 2 3 2 2 3 1 2 5 5 1 1 1 3 1 5 4 3 5 2 2 3\n",
+      " 3 1 1 2 1 4 4 2 2 5 4 3 1 4 1 3 1 1 5 1 1 1 3 3 2 5 3 1 4 3 5 3 5 2 3 1 2\n",
+      " 2 3 3 3 3 4 5 3 3 4 3 1 2 1 1 1 2 1 3 1 4 2 1 1 4 2 2 1 1 1 3 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tahap Modelling dengan Algoritma Machine Learning K - Nearest Neighbor (KNN)\n",
+    "## Import Library\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "## Membuat objek model_knn\n",
+    "model_knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "model_knn.fit(x_train, y_train)\n",
+    "\n",
+    "# Menjalankan data testing\n",
+    "y_predict = model_knn.predict(x_test)\n",
+    "print(y_predict)"
    ]
   },
   {
