Data Pre - Processing: Handling Missing Value - Part 1

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1171,6 +1171,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Pre-Processing: Handling Missing Value - Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking missing value for each features:\n",
+      "Administrative             14\n",
+      "Administrative_Duration    14\n",
+      "Informational              14\n",
+      "Informational_Duration     14\n",
+      "ProductRelated             14\n",
+      "ProductRelated_Duration    14\n",
+      "BounceRates                14\n",
+      "ExitRates                  14\n",
+      "PageValues                  0\n",
+      "SpecialDay                  0\n",
+      "Month                       0\n",
+      "OperatingSystems            0\n",
+      "Browser                     0\n",
+      "Region                      0\n",
+      "TrafficType                 0\n",
+      "VisitorType                 0\n",
+      "Weekend                     0\n",
+      "Revenue                     0\n",
+      "dtype: int64\n",
+      "\n",
+      "Counting total missing value:\n",
+      "112\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking missing value for each features\n",
+    "print(\"Checking missing value for each features:\")\n",
+    "print(dataset.isnull().sum())\n",
+    "\n",
+    "# Counting total missing value\n",
+    "print(\"\\nCounting total missing value:\")\n",
+    "print(dataset.isnull().sum().sum()) # Total missing value\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
