Data Pre - Processing: Handling Missing Value - Part 3

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1223,6 +1223,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Pre - Processing: Handling Missing Value - Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Shape dataset sebelum drop missing value: 12330 baris, 18 kolom\n",
+      "\n",
+      "Shape dataset setelah drop missing value: 12316 baris, 18 kolom\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop rows with missing value\n",
+    "print(f\"\\nShape dataset sebelum drop missing value: {dataset.shape[0]} baris, {dataset.shape[1]} kolom\")\n",
+    "dataset_clean = dataset.dropna()\n",
+    "print(f\"\\nShape dataset setelah drop missing value: {dataset_clean.shape[0]} baris, {dataset_clean.shape[1]} kolom\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Pre - Processing: Handling Missing Value - Part 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Befor Imputation: \n",
+      "Administrative             14\n",
+      "Administrative_Duration    14\n",
+      "Informational              14\n",
+      "Informational_Duration     14\n",
+      "ProductRelated             14\n",
+      "ProductRelated_Duration    14\n",
+      "BounceRates                14\n",
+      "ExitRates                  14\n",
+      "PageValues                  0\n",
+      "SpecialDay                  0\n",
+      "Month                       0\n",
+      "OperatingSystems            0\n",
+      "Browser                     0\n",
+      "Region                      0\n",
+      "TrafficType                 0\n",
+      "VisitorType                 0\n",
+      "Weekend                     0\n",
+      "Revenue                     0\n",
+      "dtype: int64\n",
+      "112\n",
+      "\n",
+      "After Imputation: \n",
+      "Administrative             0\n",
+      "Administrative_Duration    0\n",
+      "Informational              0\n",
+      "Informational_Duration     0\n",
+      "ProductRelated             0\n",
+      "ProductRelated_Duration    0\n",
+      "BounceRates                0\n",
+      "ExitRates                  0\n",
+      "PageValues                 0\n",
+      "SpecialDay                 0\n",
+      "Month                      0\n",
+      "OperatingSystems           0\n",
+      "Browser                    0\n",
+      "Region                     0\n",
+      "TrafficType                0\n",
+      "VisitorType                0\n",
+      "Weekend                    0\n",
+      "Revenue                    0\n",
+      "dtype: int64\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Befor Imputation: \")\n",
+    "# Checking missing value for each features\n",
+    "print(dataset.isnull().sum())\n",
+    "# Coutning total missing value\n",
+    "print(dataset.isnull().sum().sum())\n",
+    "\n",
+    "print(f\"\\nAfter Imputation: \")\n",
+    "numeric_col = dataset.select_dtypes(include=['number']).columns\n",
+    "# Fill missing value with median of feature value\n",
+    "dataset[numeric_col] = dataset[numeric_col].fillna(dataset[numeric_col].mean())\n",
+    "# Checking missing value for each features\n",
+    "print(dataset.isnull().sum())\n",
+    "# Counting total missing value\n",
+    "print(dataset.isnull().sum().sum())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
