Tugas Praktek: Handling Missing Value Using Median Value

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1332,6 +1332,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tugas Praktek"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before imputation: \n",
+      "Administrative             14\n",
+      "Administrative_Duration    14\n",
+      "Informational              14\n",
+      "Informational_Duration     14\n",
+      "ProductRelated             14\n",
+      "ProductRelated_Duration    14\n",
+      "BounceRates                14\n",
+      "ExitRates                  14\n",
+      "PageValues                  0\n",
+      "SpecialDay                  0\n",
+      "Month                       0\n",
+      "OperatingSystems            0\n",
+      "Browser                     0\n",
+      "Region                      0\n",
+      "TrafficType                 0\n",
+      "VisitorType                 0\n",
+      "Weekend                     0\n",
+      "Revenue                     0\n",
+      "dtype: int64\n",
+      "112\n",
+      "\n",
+      "After imputation: \n",
+      "Administrative             0\n",
+      "Administrative_Duration    0\n",
+      "Informational              0\n",
+      "Informational_Duration     0\n",
+      "ProductRelated             0\n",
+      "ProductRelated_Duration    0\n",
+      "BounceRates                0\n",
+      "ExitRates                  0\n",
+      "PageValues                 0\n",
+      "SpecialDay                 0\n",
+      "Month                      0\n",
+      "OperatingSystems           0\n",
+      "Browser                    0\n",
+      "Region                     0\n",
+      "TrafficType                0\n",
+      "VisitorType                0\n",
+      "Weekend                    0\n",
+      "Revenue                    0\n",
+      "dtype: int64\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load Dataset\n",
+    "dataset1 = pd.read_csv(r\"https://storage.googleapis.com/dqlab-dataset/pythonTutorial/online_raw.csv\")\n",
+    "\n",
+    "print(f\"Before imputation: \")\n",
+    "# Checking missing value for each features\n",
+    "print(dataset1.isnull().sum())\n",
+    "# Counting total missing value\n",
+    "print(dataset1.isnull().sum().sum())\n",
+    "\n",
+    "print(f\"\\nAfter imputation: \")\n",
+    "# Fill missing value with median of feature value\n",
+    "numeric_col = dataset1.select_dtypes(include=['number']).columns\n",
+    "dataset1[numeric_col] = dataset1[numeric_col].fillna(dataset1[numeric_col].median())\n",
+    "# Checking missing value for each features\n",
+    "print(dataset1.isnull().sum())\n",
+    "# Counting total missing value\n",
+    "print(dataset1.isnull().sum().sum())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
