Data Pre - Processing: Konversi String ke Numerik

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1615,6 +1615,48 @@
     "# Apply MinMaxScaler and Transform to scalling_column\n",
     "dataset[scalling_column] = scaler.fit_transform(dataset[scalling_column]) # Fit and transform\n",
     "display(dataset.describe().T[[\"min\",\"max\"]])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Pre - Processing: Konversi String ke Numerik"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object columns: ['Month', 'VisitorType']\n",
+      "\n",
+      "['Aug' 'Dec' 'Feb' 'Jul' 'June' 'Mar' 'May' 'Nov' 'Oct' 'Sep']\n",
+      "\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "\n",
+      "['New_Visitor' 'Other' 'Returning_Visitor']\n",
+      "\n",
+      "[0 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Convert feature: Object Column\n",
+    "object_col = dataset.select_dtypes(include=['object']).columns.to_list()\n",
+    "print(f\"Object columns: {object_col}\")\n",
+    "for column in object_col:\n",
+    "  LE = LabelEncoder()\n",
+    "  dataset[column] = LE.fit_transform(dataset[column]) # Fit and transform\n",
+    "  print(f\"\\n{LE.classes_}\")\n",
+    "  print(f\"\\n{np.sort(dataset[column].unique())}\") "
    ]
   },
   {
