Pemodelan dengan Scikit-Learn: Features & Label

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1660,6 +1660,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pemodelan dengan Scikit-Learn: Features & Label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape X: (12330, 17)\n",
+      "Shape y: (12330,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove the target column Revenue from the dataset\n",
+    "X = dataset.drop(['Revenue'], axis = 1)\n",
+    "# assigning the target column Revenue to y\n",
+    "y = dataset['Revenue']\n",
+    "# cheking the shapes\n",
+    "print(f\"Shape X: {X.shape}\")\n",
+    "print(f\"Shape y: {y.shape}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
