Training Model: Fit

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1691,6 +1691,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training dan Test Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape X_train: (9864, 17)\n",
+      "Shape X_test: (2466, 17)\n",
+      "Shape y_train: (9864,)\n",
+      "Shape y_test: (2466,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# splitting the X, and y\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)\n",
+    "# Checking the shapes\n",
+    "print(f\"Shape X_train: {X_train.shape}\") \n",
+    "print(f\"Shape X_test: {X_test.shape}\") \n",
+    "print(f\"Shape y_train: {y_train.shape}\")  \n",
+    "print(f\"Shape y_test: {y_test.shape}\") \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Model: Fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# Call the classifier\n",
+    "model_DTC = DecisionTreeClassifier()\n",
+    "\n",
+    "# Fit the classifier to the training data\n",
+    "model_DTC = model_DTC.fit(X_train, y_train)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
