Training Model: Predict

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1748,6 +1748,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Model: Predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False False ... False False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply the classifier/model to the test data\n",
+    "y_pred_DTC = model_DTC.predict(X_test)\n",
+    "print(y_pred_DTC)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
