Evaluasi Model Performance

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1774,6 +1774,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluasi Model Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy : 1.0\n",
+      "Testing Accuracy : 0.8588807785888077\n",
+      "\n",
+      "Confusion matrix:\n",
+      "[[1879  165]\n",
+      " [ 183  239]]\n",
+      "\n",
+      "Classification report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.91      0.92      0.92      2044\n",
+      "        True       0.59      0.57      0.58       422\n",
+      "\n",
+      "    accuracy                           0.86      2466\n",
+      "   macro avg       0.75      0.74      0.75      2466\n",
+      "weighted avg       0.86      0.86      0.86      2466\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "# evaluating the model\n",
+    "print('Training Accuracy :', model_DTC.score(X_train, y_train))\n",
+    "print('Testing Accuracy :', model_DTC.score(X_test, y_test))\n",
+    "\n",
+    "# confusion matrix\n",
+    "print(f\"\\nConfusion matrix:\")\n",
+    "cm = confusion_matrix(y_test, y_pred_DTC)\n",
+    "print(cm)\n",
+    "\n",
+    "# classification report\n",
+    "print(f\"\\nClassification report:\")\n",
+    "cr = classification_report(y_test, y_pred_DTC)\n",
+    "print(cr)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
