Pemodelan Permasalahan Regressi dengan Model Linear Regression

--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -1994,6 +1994,467 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pemodelan Permasalahan Klasifikasi dengan DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 1.0\n",
+      "Testing Accuracy: 0.862124898621249\n",
+      "\n",
+      "Confusion matrix:\n",
+      "[[1888  156]\n",
+      " [ 184  238]]\n",
+      "\n",
+      "Classification report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.91      0.92      0.92      2044\n",
+      "        True       0.60      0.56      0.58       422\n",
+      "\n",
+      "    accuracy                           0.86      2466\n",
+      "   macro avg       0.76      0.74      0.75      2466\n",
+      "weighted avg       0.86      0.86      0.86      2466\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# Call the classifier\n",
+    "model_DTC = DecisionTreeClassifier()\n",
+    "\n",
+    "# Fit the classifier to the training data\n",
+    "model_DTC = model_DTC.fit(X_train, y_train)\n",
+    "\n",
+    "# Apply the classifier/model to the test data\n",
+    "y_pred_DTC = model_DTC.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model\n",
+    "print(f\"Training Accuracy: {model_DTC.score(X_train, y_train)}\")\n",
+    "print(f\"Testing Accuracy: {model_DTC.score(X_test, y_test)}\")\n",
+    "\n",
+    "# Confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred_DTC)\n",
+    "print(f\"\\nConfusion matrix:\")\n",
+    "print(cm)\n",
+    "\n",
+    "# Classification report\n",
+    "cr = classification_report(y_test, y_pred_DTC)\n",
+    "print(f\"\\nClassification report:\")\n",
+    "print(cr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pemodelan Permasalahan Regressi dengan LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info dataset:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 489 entries, 0 to 488\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   RM       489 non-null    float64\n",
+      " 1   LSTAT    489 non-null    float64\n",
+      " 2   PTRATIO  489 non-null    float64\n",
+      " 3   MEDV     489 non-null    int64  \n",
+      "dtypes: float64(3), int64(1)\n",
+      "memory usage: 15.4 KB\n",
+      "None\n",
+      "Checking missing value:\n",
+      "Check missing value:\n",
+      "RM         0\n",
+      "LSTAT      0\n",
+      "PTRATIO    0\n",
+      "MEDV       0\n",
+      "dtype: int64\n",
+      "Counting total missing value:\n",
+      "0\n",
+      "\n",
+      "Statistik deskriptif dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RM</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>6.240288</td>\n",
+       "      <td>0.643650</td>\n",
+       "      <td>3.561</td>\n",
+       "      <td>5.88</td>\n",
+       "      <td>6.185</td>\n",
+       "      <td>6.575</td>\n",
+       "      <td>8.398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LSTAT</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>12.939632</td>\n",
+       "      <td>7.081990</td>\n",
+       "      <td>1.980</td>\n",
+       "      <td>7.37</td>\n",
+       "      <td>11.690</td>\n",
+       "      <td>17.120</td>\n",
+       "      <td>37.970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>18.516564</td>\n",
+       "      <td>2.111268</td>\n",
+       "      <td>12.600</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>19.100</td>\n",
+       "      <td>20.200</td>\n",
+       "      <td>22.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEDV</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>454342.944785</td>\n",
+       "      <td>165340.277653</td>\n",
+       "      <td>105000.000</td>\n",
+       "      <td>350700.00</td>\n",
+       "      <td>438900.000</td>\n",
+       "      <td>518700.000</td>\n",
+       "      <td>1024800.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         count           mean            std         min        25%  \\\n",
+       "RM       489.0       6.240288       0.643650       3.561       5.88   \n",
+       "LSTAT    489.0      12.939632       7.081990       1.980       7.37   \n",
+       "PTRATIO  489.0      18.516564       2.111268      12.600      17.40   \n",
+       "MEDV     489.0  454342.944785  165340.277653  105000.000  350700.00   \n",
+       "\n",
+       "                50%         75%          max  \n",
+       "RM            6.185       6.575        8.398  \n",
+       "LSTAT        11.690      17.120       37.970  \n",
+       "PTRATIO      19.100      20.200       22.000  \n",
+       "MEDV     438900.000  518700.000  1024800.000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RM</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>MEDV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.575</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>504000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.421</td>\n",
+       "      <td>9.14</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>453600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.185</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>728700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.998</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>701400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.147</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>760200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      RM  LSTAT  PTRATIO    MEDV\n",
+       "0  6.575   4.98     15.3  504000\n",
+       "1  6.421   9.14     17.8  453600\n",
+       "2  7.185   4.03     17.8  728700\n",
+       "3  6.998   2.94     18.7  701400\n",
+       "4  7.147   5.33     18.7  760200"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Load dataset\n",
+    "dataset_housing = pd.read_csv(f\"https://storage.googleapis.com/dqlab-dataset/pythonTutorial/housing_boston.csv\")\n",
+    "\n",
+    "# Information dataset\n",
+    "print(f\"Info dataset:\")\n",
+    "print(dataset_housing.info())\n",
+    "\n",
+    "# Checking missing value\n",
+    "print(f\"Checking missing value:\")\n",
+    "print(f\"Check missing value:\")\n",
+    "print(dataset_housing.isnull().sum())\n",
+    "print(f\"Counting total missing value:\")\n",
+    "print(dataset_housing.isnull().sum().sum())\n",
+    "\n",
+    "# Statistik deskriptif dataset\n",
+    "print(f\"\\nStatistik deskriptif dataset:\")\n",
+    "display(dataset_housing.describe().T)\n",
+    "\n",
+    "# Display 5 data teratas\n",
+    "display(dataset_housing.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RM</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>0.553915</td>\n",
+       "      <td>0.133068</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.479429</td>\n",
+       "      <td>0.542485</td>\n",
+       "      <td>0.623114</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LSTAT</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>0.304519</td>\n",
+       "      <td>0.196777</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.149764</td>\n",
+       "      <td>0.269797</td>\n",
+       "      <td>0.420672</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>0.629422</td>\n",
+       "      <td>0.224603</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.510638</td>\n",
+       "      <td>0.691489</td>\n",
+       "      <td>0.808511</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEDV</th>\n",
+       "      <td>489.0</td>\n",
+       "      <td>0.379803</td>\n",
+       "      <td>0.179757</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.267123</td>\n",
+       "      <td>0.363014</td>\n",
+       "      <td>0.449772</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         count      mean       std  min       25%       50%       75%  max\n",
+       "RM       489.0  0.553915  0.133068  0.0  0.479429  0.542485  0.623114  1.0\n",
+       "LSTAT    489.0  0.304519  0.196777  0.0  0.149764  0.269797  0.420672  1.0\n",
+       "PTRATIO  489.0  0.629422  0.224603  0.0  0.510638  0.691489  0.808511  1.0\n",
+       "MEDV     489.0  0.379803  0.179757  0.0  0.267123  0.363014  0.449772  1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Data Rescaling\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler(feature_range=(0,1))\n",
+    "dataset_housing[[\"RM\",\"LSTAT\",\"PTRATIO\",\"MEDV\"]] = scaler.fit_transform(dataset_housing[[\"RM\",\"LSTAT\",\"PTRATIO\",\"MEDV\"]])\n",
+    "\n",
+    "# Statistik deskriptif dataset setelah rescaling\n",
+    "display(dataset_housing.describe().T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape X_train: (342, 3)\n",
+      "Shape X_test: (147, 3)\n",
+      "Shape y_train: (342,)\n",
+      "Shape y_test: (147,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting Independent and Dependent Variables\n",
+    "X = dataset_housing.drop(['MEDV'], axis = 1)\n",
+    "y = dataset_housing['MEDV']\n",
+    "\n",
+    "# Splitting the dataset\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 0)  # 70% training and 30% testing\n",
+    "\n",
+    "# Checking the shapes\n",
+    "print(f\"Shape X_train: {X_train.shape}\")\n",
+    "print(f\"Shape X_test: {X_test.shape}\")  \n",
+    "print(f\"Shape y_train: {y_train.shape}\")\n",
+    "print(f\"Shape y_test: {y_test.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Regressor from Sklearn\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Call the regressor\n",
+    "model_linreg = LinearRegression()\n",
+    "# Fit the regressor to the training data\n",
+    "model_linreg = model_linreg.fit(X_train, y_train)\n",
+    "# Apply the regressor/model to the test data\n",
+    "y_pred_linreg = model_linreg.predict(X_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
