--- a/machine_learning_with_python_for_beginner.ipynb
+++ b/machine_learning_with_python_for_beginner.ipynb
@@ -2862,6 +2862,327 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Case Study: Promos for our e-commerce - Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[1] Ekplorasi dataset\n",
+      "Informasi dataset:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Daily Time Spent on Site  1000 non-null   float64\n",
+      " 1   Age                       1000 non-null   int64  \n",
+      " 2   Area Income               1000 non-null   float64\n",
+      " 3   Daily Internet Usage      1000 non-null   float64\n",
+      " 4   Ad Topic Line             1000 non-null   object \n",
+      " 5   City                      1000 non-null   object \n",
+      " 6   Male                      1000 non-null   int64  \n",
+      " 7   Country                   1000 non-null   object \n",
+      " 8   Timestamp                 1000 non-null   object \n",
+      " 9   Clicked on Ad             1000 non-null   int64  \n",
+      "dtypes: float64(3), int64(3), object(4)\n",
+      "memory usage: 78.3+ KB\n",
+      "None\n",
+      "Statistik deskriptif dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Daily Time Spent on Site</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>65.00020</td>\n",
+       "      <td>15.853615</td>\n",
+       "      <td>32.60</td>\n",
+       "      <td>51.3600</td>\n",
+       "      <td>68.215</td>\n",
+       "      <td>78.5475</td>\n",
+       "      <td>91.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>36.00900</td>\n",
+       "      <td>8.785562</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>29.0000</td>\n",
+       "      <td>35.000</td>\n",
+       "      <td>42.0000</td>\n",
+       "      <td>61.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Area Income</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>55000.00008</td>\n",
+       "      <td>13414.634022</td>\n",
+       "      <td>13996.50</td>\n",
+       "      <td>47031.8025</td>\n",
+       "      <td>57012.300</td>\n",
+       "      <td>65470.6350</td>\n",
+       "      <td>79484.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Daily Internet Usage</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>180.00010</td>\n",
+       "      <td>43.902339</td>\n",
+       "      <td>104.78</td>\n",
+       "      <td>138.8300</td>\n",
+       "      <td>183.130</td>\n",
+       "      <td>218.7925</td>\n",
+       "      <td>269.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.48100</td>\n",
+       "      <td>0.499889</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Clicked on Ad</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>0.500250</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           count         mean           std       min  \\\n",
+       "Daily Time Spent on Site  1000.0     65.00020     15.853615     32.60   \n",
+       "Age                       1000.0     36.00900      8.785562     19.00   \n",
+       "Area Income               1000.0  55000.00008  13414.634022  13996.50   \n",
+       "Daily Internet Usage      1000.0    180.00010     43.902339    104.78   \n",
+       "Male                      1000.0      0.48100      0.499889      0.00   \n",
+       "Clicked on Ad             1000.0      0.50000      0.500250      0.00   \n",
+       "\n",
+       "                                 25%        50%         75%       max  \n",
+       "Daily Time Spent on Site     51.3600     68.215     78.5475     91.43  \n",
+       "Age                          29.0000     35.000     42.0000     61.00  \n",
+       "Area Income               47031.8025  57012.300  65470.6350  79484.80  \n",
+       "Daily Internet Usage        138.8300    183.130    218.7925    269.96  \n",
+       "Male                          0.0000      0.000      1.0000      1.00  \n",
+       "Clicked on Ad                 0.0000      0.500      1.0000      1.00  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ukuran dataset:\n",
+      "data memiliki 1000 baris dan 10 kolom\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Daily Time Spent on Site</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Area Income</th>\n",
+       "      <th>Daily Internet Usage</th>\n",
+       "      <th>Ad Topic Line</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Male</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Clicked on Ad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>68.95</td>\n",
+       "      <td>35</td>\n",
+       "      <td>61833.90</td>\n",
+       "      <td>256.09</td>\n",
+       "      <td>Cloned 5thgeneration orchestration</td>\n",
+       "      <td>Wrightburgh</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Tunisia</td>\n",
+       "      <td>3/27/2016 0:53</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>80.23</td>\n",
+       "      <td>31</td>\n",
+       "      <td>68441.85</td>\n",
+       "      <td>193.77</td>\n",
+       "      <td>Monitored national standardization</td>\n",
+       "      <td>West Jodi</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nauru</td>\n",
+       "      <td>4/4/2016 1:39</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>69.47</td>\n",
+       "      <td>26</td>\n",
+       "      <td>59785.94</td>\n",
+       "      <td>236.50</td>\n",
+       "      <td>Organic bottom-line service-desk</td>\n",
+       "      <td>Davidton</td>\n",
+       "      <td>0</td>\n",
+       "      <td>San Marino</td>\n",
+       "      <td>3/13/2016 20:35</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>74.15</td>\n",
+       "      <td>29</td>\n",
+       "      <td>54806.18</td>\n",
+       "      <td>245.89</td>\n",
+       "      <td>Triple-buffered reciprocal time-frame</td>\n",
+       "      <td>West Terrifurt</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1/10/2016 2:31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>68.37</td>\n",
+       "      <td>35</td>\n",
+       "      <td>73889.99</td>\n",
+       "      <td>225.58</td>\n",
+       "      <td>Robust logistical utilization</td>\n",
+       "      <td>South Manuel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>6/3/2016 3:36</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Daily Time Spent on Site  Age  Area Income  Daily Internet Usage  \\\n",
+       "0                     68.95   35     61833.90                256.09   \n",
+       "1                     80.23   31     68441.85                193.77   \n",
+       "2                     69.47   26     59785.94                236.50   \n",
+       "3                     74.15   29     54806.18                245.89   \n",
+       "4                     68.37   35     73889.99                225.58   \n",
+       "\n",
+       "                           Ad Topic Line            City  Male     Country  \\\n",
+       "0     Cloned 5thgeneration orchestration     Wrightburgh     0     Tunisia   \n",
+       "1     Monitored national standardization       West Jodi     1       Nauru   \n",
+       "2       Organic bottom-line service-desk        Davidton     0  San Marino   \n",
+       "3  Triple-buffered reciprocal time-frame  West Terrifurt     1       Italy   \n",
+       "4          Robust logistical utilization    South Manuel     0     Iceland   \n",
+       "\n",
+       "         Timestamp  Clicked on Ad  \n",
+       "0   3/27/2016 0:53              0  \n",
+       "1    4/4/2016 1:39              0  \n",
+       "2  3/13/2016 20:35              0  \n",
+       "3   1/10/2016 2:31              0  \n",
+       "4    6/3/2016 3:36              0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Import Library\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Baca data 'ecommerce_banner_promo.csv'\n",
+    "data = pd.read_csv(f\"https://storage.googleapis.com/dqlab-dataset/pythonTutorial/ecommerce_banner_promo.csv\")\n",
+    "\n",
+    "# Ekplorasi dataset\n",
+    "print(f\"\\n[1] Ekplorasi dataset\")\n",
+    "print(f\"Informasi dataset:\")\n",
+    "print(data.info())\n",
+    "print(f\"Statistik deskriptif dataset:\")\n",
+    "display(data.describe().T)\n",
+    "print(f\"Ukuran dataset:\")\n",
+    "print(f\"data memiliki {data.shape[0]} baris dan {data.shape[1]} kolom\")\n",
+    "\n",
+    "# Display the first 5 rows of the dataset\n",
+    "display(data.head())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
