Ringkasan Observasi Data Numerik

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -275,10 +275,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<h3>Ringkasan Observasi Data Numerik</h3>\n",
+    "<h4><strong>1. Umur</strong></h4>\n",
+    "<ol>\n",
+    "  <li>Distribusi umur pelanggan cenderung normal dengan sedikit kemiringan ke kanan (right-skewed)</li>\n",
+    "  <li>Sebagian besar pelanggan berumur 20-50 tahun</li>\n",
+    "  <li>Tidak ada outlier signifikan</li>\n",
+    "</ol>\n",
+    "<h4><strong>2. Nilai Belanja Setahun</strong></h4>\n",
+    "<ol>\n",
+    "  <li>Distribusi nilai belanja setahun pelanggan memiliki kemiringan ke kanan (right-skewed) itu artinya ada beberapa pelanggan dengan nilai belanja yang sangat tinggi</li>\n",
+    "  <li>Sebagian besar pelanggan memiliki nilai belanja setahun bernilai 4.000.000 - 8.000.000</li>\n",
+    "  <li>Ada outlier yang siginifikan artinya ada beberapa pelanggan dengan nilai belanja yang sangat tinggi</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
