Tipss git add .! Proses Eksplorasi Dataset

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -389,6 +389,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h3><strong>Tips !!!</strong></h3>\n",
+    "<p>Kita dapat mengenal data kita lebih jauh lagi pada tahapan eksplorasi data ini. Proses eksplorasi data bisa berupa univariate maupun multivariate data eksplorasi. Eksplorasi Data Univariate melihat karakteristik tiap-tiap feature, misalnya dengan melihat statistik deskriptif, membuat histogram, kdeplot, countplot maupun boxplot. Sedangkan untuk Eksplorasi Data Multivariate, kita melihat hubungan tiap variabel dengan variabel lainnya, misal kan dengan membuat korelasi matrix, melihat predictive power, cross tabulasi, dan lainnya.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
