Penjelasan Mengenai Clustering & Algoritma K-Prototype

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -397,6 +397,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>8. Apa itu <strong>Clustering</strong> dan Algoritma <strong>K-Prototype</strong></h2>\n",
+    "<ul>\n",
+    "  <li><strong>Clustering</strong> : Proses pembagian objek - objek ke dalam beberapa kelompok (cluster) berdasarkan tingkat kemiripan antara sati objek dengan yang lain</li>\n",
+    "  <li><strong>K-Prototype</strong> = <strong>K-Means</strong> + <strong>K-Modes</strong> --> Integrasi yang komplek</li>\n",
+    "  <li><strong>K-Means</strong> : Algoritma untuk melakukan Clustering <strong>Data Numerik</strong></li>\n",
+    "  <li><strong>K-Modes</strong> : Algoritma untuk melakukan Clustering <strong>Data Kategorikal</strong></li>\n",
+    "  <li><strong>K-Prototype</strong> : Algoritma untuk melakukan Clustering <strong>Data Numerik</strong> & <strong>Data Kategorikal</strong></li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
