Mempersiapkan Data Sebelum Permodelan

--- a/data_science_in_marketing_customer_segmentation_with_python.ipynb
+++ b/data_science_in_marketing_customer_segmentation_with_python.ipynb
@@ -398,6 +398,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2>8. Mempersiapkan Data Sebelum Permodelan</h2>\n",
+    "<h3>Syarat - Syarat Clustering Menggunakan Model <strong>K-Prototype</strong></h3>\n",
+    "<ol>\n",
+    "  <li><strong>Data Numerik</strong> memiliki <strong>Skala</strong> yang sama dengan metode <strong>Standarisasi</strong> Data Numerik</li>\n",
+    "  <li><strong>Data Kategorikal</strong> dirubah menjadi <strong>Data Numerik</strong> dengan metode <strong>Encoding</strong></li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>8. Apa itu <strong>Clustering</strong> dan Algoritma <strong>K-Prototype</strong></h2>\n",
     "<ul>\n",
     "  <li><strong>Clustering</strong> : Proses pembagian objek - objek ke dalam beberapa kelompok (cluster) berdasarkan tingkat kemiripan antara sati objek dengan yang lain</li>\n",
@@ -411,6 +423,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>9. Mencari Jumlah Cluster yang Optimal</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
